--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
+        "guzzlehttp/guzzle": "^6.5",
         "htmlmin/htmlmin": "^6.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "spatie/laravel-analytics": "^3.9"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
